fix  'skill row' text wrapping issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,29 @@
 body {
-  color: #40514E;
+  color: #40514e;
   margin: 0;
   text-align: center;
-  font-family: 'Merriweather',serif;
+  font-family: "Merriweather", serif;
 }
 
 h1 {
-  color: #66BFBF;
+  color: #66bfbf;
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 90px;
 }
 
 h2 {
-  color: #66BFBF;
-  font-family: 'Montserrat', sans-serif;
+  color: #66bfbf;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
   padding-bottom: 10px;
 }
 
 h3 {
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
 }
 
 p {
@@ -31,26 +31,25 @@ p {
 }
 
 hr {
-  border: dotted #EAF6F6 6px;
+  border: dotted #eaf6f6 6px;
   border-bottom: none;
   width: 4%;
   margin: 100px auto;
 }
 
-
-a{
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
+a {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
   margin: 10px 20px;
   text-decoration: none;
 }
 
 a:hover {
-  color: #EAF6F6;
+  color: #eaf6f6;
 }
 
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #e4f9f5;
   position: relative;
   padding-top: 100px;
 }
@@ -60,7 +59,7 @@ a:hover {
 }
 
 .bottom-container {
-  background-color: #66BFBF;
+  background-color: #66bfbf;
   padding: 50px 0 20px;
 }
 
@@ -69,6 +68,13 @@ a:hover {
   margin: 100px auto 100px auto;
   text-align: left;
   overflow: auto;
+}
+
+.left-skill-row-text {
+  margin: auto auto auto 30%;
+}
+.right-skill-row-text {
+  margin: auto 30% auto auto;
 }
 .pro {
   text-decoration: underline;
@@ -82,7 +88,7 @@ a:hover {
   margin: 40px auto 60px;
 }
 .copyright {
-  color: #EAF6F6;
+  color: #eaf6f6;
   font-size: 0.75rem;
   padding: 20px 0;
 }
@@ -100,8 +106,8 @@ a:hover {
 }
 
 .profile-img {
-  height : 200px;
-  width : 200px;
+  height: 200px;
+  width: 200px;
 }
 
 .code-img {
@@ -113,7 +119,7 @@ a:hover {
 .reverse-engineering-img {
   width: 25%;
   float: right;
-  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .btn {
@@ -126,7 +132,7 @@ a:hover {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
